--- a/lottery-system/pom.xml
+++ b/lottery-system/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- spring-boot 2.3及以上的版本只需要引⼊下⾯的依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
