--- a/lottery-system/src/main/resources/application.properties
+++ b/lottery-system/src/main/resources/application.properties
@@ -3,3 +3,19 @@ spring.application.name=lottery_system
 ## logback xml ##
 logging.config = classpath:logback-spring.xml
 spring.profiles.active = dev
+
+## MySql ##
+#驱动类名称
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#数据库连接的url
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lottery_system?characterEncoding=utf8&useSSL=false
+#连接数据库的⽤⼾名
+spring.datasource.username=root
+#连接数据库的密码
+spring.datasource.password=1111
+## MyBatis ##
+#配置mybatis xml的⽂件路径，在resources/mapper创建所有表的xml⽂件
+#mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+#配置驼峰⾃动转换
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-handlers-package=com.example.lotterysystem.dao.handler
