--- a/lottery-system/src/main/resources/application.properties
+++ b/lottery-system/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.web.resources.static-locations=classpath:/static/,file:${pic.local-path}
 
 ## mq ##
 spring.rabbitmq.host=47.108.82.170
-spring.rabbitmq.port=15672
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 #\u6D88\u606F\u786E\u8BA4\u673A\u5236\uFF0C\u9ED8\u8BA4auto
@@ -54,3 +54,16 @@ spring.rabbitmq.listener.simple.acknowledge-mode=auto
 #\u8BBE\u7F6E\u5931\u8D25\u91CD\u8BD55\u6B21
 spring.rabbitmq.listener.simple.retry.enabled=true
 spring.rabbitmq.listener.simple.retry.max-attempts=5
+
+##\u90AE\u4EF6##
+spring.mail.host=smtp.qq.com
+spring.mail.username=3316845265@qq.com
+#\u4F60\u7684\u6388\u6743\u7801\uFF1A\u90AE\u7BB1\u8BBE\u7F6E\u300B\u7B2C\u4E09\u2F45\u670D\u52A1\u300B\u5F00\u542FIMAP/SMTP\u670D\u52A1\u300B\u83B7\u53D6\u6388\u6743\u7801
+spring.mail.password=mdylmrrkjofachej
+spring.mail.default-encoding=UTF-8
+
+##\u7EBF\u7A0B\u6C60##
+async.executor.thread.core_pool_size=10
+async.executor.thread.max_pool_size=20
+async.executor.thread.queue_capacity=20
+async.executor.thread.name.prefix=async-service-
